# Aether

./: .env.example  .gitignore  README.md  deploy.sh  dev.sh  docker-compose.build.yml  docker-compose.yml  fix_env_key.py  pyproject.toml  test_key_conversion.py  test_rsa.py
alembic/versions/: 20260302_1500_dd0278c0a28c_backfill_codex_default_body_rules.py  20260308_0348_45b118150a78_usage_stats_retention_set_null_on_.py  20260308_1215_13a4c8f6d9e0_request_candidate_video_task_retention.py  20260311_2200_9b7c6d5e4f3a_add_provider_key_usage_totals.py  20260320_1200_c9d8e7f6a5b4_add_status_snapshot_to_provider_api_keys.py  20260324_1400_c3d4e5f6a7b8_usage_token_semantics_v2.py  20260325_1100_e2f4a6b8c9d0_add_provider_key_time_windows.py
docs/: alipay_integration_review.md  remote_deployment_troubleshooting.md
frontend/: index.html  package-lock.json  pnpm-lock.yaml  tsconfig.app.json
scripts/: backfill_provider_key_status_snapshot.py  deploy-aether.sh  reset_admin_password.py  rotate_encryption_key.py
src/: main.py
src/clients/: curl_cffi_transport.py  http_client.py  redis_client.py
src/config/: constants.py  settings.py
src/core/: crypto.py  provider_oauth_utils.py  vertex_auth.py
src/middleware/: plugin_middleware.py
src/models/: admin_requests.py  api.py  database.py  endpoint_models.py  status_snapshot.py
src/plugins/: manager.py
src/utils/: task_coordinator.py  time_window.py
tests/: conftest.py
tests/api/: test_admin_usage_routes.py  test_admin_user_routes.py  test_analytics_routes.py  test_payment_routes.py  test_pipeline.py  test_user_me_api_key_routes.py  test_user_me_usage_routes.py  test_user_privacy_routes.py
tests/clients/: test_redis_client.py
tests/contracts/: test_public_api_routes_contract.py  test_scheduler_list_all_candidates_contract.py  test_scheduler_provider_prefilter_contract.py
tests/services/: test_analytics_query_service.py  test_auth.py  test_aware_scheduler_quota_skipping.py  test_batch_delete_task.py  test_candidate_service_submit.py  test_codex_request.py  test_error_handler_auto_remove_banned.py  test_failover_engine.py  test_format_conversion_health_buckets.py  test_global_model_auto_disassociate.py  test_health_monitor_summary.py  test_kiro_envelope.py  test_linuxdo_oauth_provider.py  test_model_cache_service.py  test_model_fetch_scheduler.py  test_oauth_service.py  test_openai_prompt_cache.py  test_pool_account_state.py  test_pool_multi_score_strategy.py  test_pool_quota_probe_scheduler.py  test_pool_scheduling_dimensions.py  test_provider_auth_detached.py  test_provider_auth_vertex_service_account.py  test_provider_keys_key_command_service.py  test_provider_keys_query_service.py  test_provider_keys_quota_refresh_strategies.py  test_provider_keys_quota_service.py  test_provider_ops_service_verify_auth.py  test_provider_transport.py  test_provider_transport_codex.py  test_quota_reader.py  test_startup_toggles.py  test_stats_aggregator_optimization.py  test_sync_execute_state_transition.py  test_task_pool_ops.py  test_task_service_async_execute.py  test_upstream_fetcher_vertex_ai_models.py  test_upstream_stream_policy.py  test_usage_billing_integration.py  test_usage_queue_events.py  (+9 more)
tests/unit/: test_admin_endpoint_create_defaults.py  test_admin_monitoring_audit_metrics.py  test_admin_pool_money_serialization.py  test_admin_system_key_formats.py  test_api_format_metadata.py  test_api_request_context.py  test_candidate_recorder.py  test_curl_cffi_transport_pool.py  test_handler_adapter_base.py  test_http_client_pool_cleanup.py  test_monitoring_trace_attempted_subset.py  test_notification_email_module_toggle.py  test_pool_management_filters.py  test_provider_key_response_builder.py  test_provider_key_status_snapshot_store.py  (+10 more)
(+376 files in other folders)
